Macrofy rest of the BB types

--- a/text/accounts.tex
+++ b/text/accounts.tex
@@ -77,7 +77,7 @@ During the on-chain execution of the \emph{Accumulate} function, this is trivial
 
 By retaining historical information on its availability, we become confident that any validator with a recently finalized view of the chain is able to determine whether any given preimage was available at any time within the period where auditing may occur. This ensures confidence that judgments will be deterministic even without consensus on chain state.
 
-Restated, we must be able to define some \emph{historical} lookup function $\histlookup$ which determines whether the preimage of some hash $h$ was available for lookup by some service account $\mathbf{a}$ at some timeslot $t$, and if so, provide its preimage:
+Restated, we must be able to define some \emph{historical} lookup function $\histlookup$ which determines whether the preimage of some hash was available for lookup by some service account at some timeslot, and if so, provide it:
 \begin{equation}
 \begin{aligned}
   \histlookup\colon \left\{\ \begin{aligned}
