--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -197,7 +197,7 @@ The single-service accumulation function, $\Delta_1$, transforms an initial stat
     \isa{\ot¬authorizer}{\hash},
     \isa{\ot¬payloadhash}{\hash},
     \isa{\ot¬gaslimit}{\gas},
-    \isa{\ot¬result}{\blob \cup \mathbb{J}},
+    \isa{\ot¬result}{\blob \cup \workerror},
     \isa{\ot¬authtrace}{\blob}
   }
 \end{equation}
