--- a/text/header.tex
+++ b/text/header.tex
@@ -54,7 +54,7 @@ All blocks have an associated public key to identify the author of the block. We
 If not $\none$, then the epoch marker specifies key and entropy relevant to the following epoch in case the ticket contest does not complete adequately (a very much unexpected eventuality). Similarly, the winning-tickets marker, if not $\none$, provides the series of 600 slot sealing ``tickets'' for the next epoch (see the next section). Finally, the offenders marker is the sequence of Ed25519 keys of newly misbehaving validators, to be fully explained in section \ref{sec:disputes}. Formally:
 \begin{equation}
   \H_\¬epochmark \in \optional{\tuple{\hash, \hash, \seq{\tuple{\bskey, \edkey}}_{\valcount}}}\,,\quad
-  \H_\¬winnersmark \in \optional{\seq{\mathbb{C}}_{\epochlen}}\,,\quad
+  \H_\¬winnersmark \in \optional{\seq{\safroleticket}_{\epochlen}}\,,\quad
   \H_\¬offendersmark \in \seq{\edkey}
 \end{equation}
 
