--- a/text/judgments.tex
+++ b/text/judgments.tex
@@ -32,9 +32,9 @@ The disputes extrinsic, $\xtdisputes$, may contain one or more verdicts $\xtverd
 \begin{equation}
   \begin{aligned}
     \xtdisputes &\equiv (\xtverdicts, \xtculprits, \xtfaults) \\
-    \where \xtverdicts &\in \seq{\tup{\hash, \ffrac{\thetime}{\epochlen} - \N_2, \seq{\tup{\{\top, \bot\}, \valindex, \mathbb{E}}}_{\floor{\nicefrac{2}{3}\valcount} + 1}}}\\
-    \also \xtculprits &\in \seq{\hash, \edkey, \mathbb{E}} \,,\quad
-    \xtfaults \in \seq{\hash, \{\top,\bot\}, \edkey, \mathbb{E}}
+    \where \xtverdicts &\in \seq{\tup{\hash, \ffrac{\thetime}{\epochlen} - \N_2, \seq{\tup{\{\top, \bot\}, \valindex, \signature}}_{\floor{\nicefrac{2}{3}\valcount} + 1}}}\\
+    \also \xtculprits &\in \seq{\hash, \edkey, \signature} \,,\quad
+    \xtfaults \in \seq{\hash, \{\top,\bot\}, \edkey, \signature}
   \end{aligned}
 \end{equation}
 
