--- a/preamble.tex
+++ b/preamble.tex
@@ -218,16 +218,36 @@
 \newcommand*{\histlookup}{\Lambda}
 
 % Primitive types
-\newcommand*{\dict}[2]{\mathbb{D}\ang{#1\to#2}}
-\newcommand*{\sig}[2]{\mathbb{E}_{#1}\ang{#2}}
-\newcommand*{\bandersnatch}[3]{\bar{\mathbb{F}}_{#1}^{#3}\ang{#2}}
-\newcommand*{\bandersig}[3]{\mathbb{F}_{#1}^{#3}\ang{#2}}
+\newcommand*{\serviceaccount}{\mathbb{A}}
+\newcommand*{\bitstring}{\mathbb{B}}
+\newcommand*{\safroleticket}{\mathbb{C}}
+\newcommand*{\dictionary}{\mathbb{D}}
+\newcommand*{\dict}[2]{\dictionary\ang{#1\to#2}}
+\newcommand*{\signature}{\mathbb{E}}
+\newcommand*{\sig}[2]{\signature_{#1}\ang{#2}}
+\newcommand*{\bssignature}{\mathbb{F}}
+\newcommand*{\bsringproof}{\bar{\mathbb{F}}}
+\newcommand*{\bandersnatch}[3]{\bsringproof_{#1}^{#3}\ang{#2}}
+\newcommand*{\bandersig}[3]{\bssignature_{#1}^{#3}\ang{#2}}
+\newcommand*{\segment}{\mathbb{G}}
 \renewcommand*{\hash}{\mathbb{H}}
+\newcommand*{\workitem}{\mathbb{I}}
+\newcommand*{\workerror}{\mathbb{J}}
+\newcommand*{\valkey}{\mathbb{K}}
+\newcommand*{\workdigest}{\mathbb{L}}
+\newcommand*{\ram}{\mathbb{M}}
 \newcommand*{\N}{\mathbb{N}}
-\newcommand*{\G}{\mathbb{G}}
+\newcommand*{\operandtuple}{\mathbb{O}}
+\newcommand*{\workpackage}{\mathbb{P}}
+% Q unused
+% R unused
+\newcommand*{\avspec}{\mathbb{S}}
 \newcommand*{\defxfer}{\mathbb{T}}
 \newcommand*{\defxfers}{\seq\defxfer}
 \newcommand*{\partialstate}{\mathbb{U}}
+\newcommand*{\readable}[1]{\mathbb{V}_{#1}}
+\newcommand*{\writable}[1]{\mathbb{V}^*_{#1}}
+\newcommand*{\workreport}{\mathbb{W}}
 \newcommand*{\blob}{\mathbb{Y}}
 \newcommand*{\Z}{\mathbb{Z}}
 
@@ -268,11 +288,11 @@
 \newcommand*{\¬importcount}{i}
 
 % TODO make this local.
-\newcommand*{\safroleticket}{\mathbb{C}}
+%\newcommand*{\safroleticket}{\mathbb{C}}
 \newcommand*{\st¬id}{y}
 \newcommand*{\st¬entry}{r}
 
-\newcommand*{\workpackage}{\mathbb{P}}
+%\newcommand*{\workpackage}{\mathbb{P}}
 \newcommand*{\wp¬authtoken}{\mathbf{j}}
 \newcommand*{\wp¬authcodehost}{h}
 \newcommand*{\wp¬authcodehash}{u}
@@ -284,7 +304,7 @@
 \newcommand*{\wp¬authcode}{\mathbf{c}}
 \newcommand*{\wp¬metadata}{\mathbf{m}}
 
-\newcommand*{\workitem}{\mathbb{I}}
+%\newcommand*{\workitem}{\mathbb{I}}
 \newcommand*{\wi¬service}{\¬service}
 \newcommand*{\wi¬codehash}{\¬codehash}
 \newcommand*{\wi¬payload}{\¬payload}
@@ -294,7 +314,7 @@
 \newcommand*{\wi¬importsegments}{\mathbf{i}}
 \newcommand*{\wi¬extrinsics}{\mathbf{x}}
 
-\newcommand*{\workreport}{\mathbb{W}}
+%\newcommand*{\workreport}{\mathbb{W}}
 \newcommand*{\wr¬avspec}{s} % O/L ¬service TODO: make bold
 \newcommand*{\wr¬context}{x} % TODO: Make bold like package. Consider renaming to \mathbf{c}
 \newcommand*{\wr¬core}{\¬core}
@@ -311,7 +331,7 @@
 % d: work output data (digest)
 % y: work payload
 
-\newcommand*{\workdigest}{\mathbb{L}}
+%\newcommand*{\workdigest}{\mathbb{L}}
 \newcommand*{\wl¬service}{\¬service}
 \newcommand*{\wl¬codehash}{\¬codehash}
 \newcommand*{\wl¬payloadhash}{\¬payloadhash}
@@ -323,7 +343,7 @@
 \newcommand*{\wl¬xtsize}{z}
 \newcommand*{\wl¬exportcount}{\¬exportcount}
 
-\newcommand*{\operandtuple}{\mathbb{O}}
+%\newcommand*{\operandtuple}{\mathbb{O}}
 \newcommand*{\ot¬packagehash}{h} % O/L ¬codehash TODO: RENAME to k
 \newcommand*{\ot¬segroot}{e} % O/L ¬exportcount TODO: RENAME to r?
 \newcommand*{\ot¬authorizer}{\¬authorizer}
@@ -332,14 +352,14 @@
 \newcommand*{\ot¬gaslimit}{\¬gaslimit}
 \newcommand*{\ot¬result}{\¬result}
 
-\newcommand*{\avspec}{\mathbb{S}}
+%\newcommand*{\avspec}{\mathbb{S}}
 \newcommand*{\as¬packagehash}{h}
 \newcommand*{\as¬bundlelen}{l}
 \newcommand*{\as¬erasureroot}{u}
 \newcommand*{\as¬segroot}{r} % Inconsistent with other segroot. TODO: RENAME to e?
 \newcommand*{\as¬segcount}{n}
 
-\newcommand*{\serviceaccount}{\mathbb{A}}
+%\newcommand*{\serviceaccount}{\mathbb{A}}
 \newcommand*{\sa¬storage}{\mathbf{s}}
 \newcommand*{\sa¬preimages}{\mathbf{p}}
 \newcommand*{\sa¬requests}{\mathbf{l}}
@@ -359,7 +379,7 @@
 \newcommand*{\sa¬code}{\mathbf{c}}
 
 % Derived fields of validator keys.
-\newcommand*{\valkey}{\mathbb{K}}
+%\newcommand*{\valkey}{\mathbb{K}}
 \newcommand*{\vk¬bs}{b}
 \newcommand*{\vk¬ed}{e}
 \newcommand*{\vk¬bls}{BLS}
