--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -25,39 +25,33 @@
 \subsubsection{Custom Notation}
 \begin{description}
   \item[$\serviceaccount$] The set of service accounts. See equation \ref{eq:serviceaccount}.
-  \item[$\mathbb{B}$] The set of Boolean sequences/bitstrings. Subscript denotes length. See section \ref{sec:sequences}.
-  \item[$\mathbb{C}$] The set of seal-key tickets. See equation \ref{eq:ticket}. \emph{Not used as the set of complex numbers.}
-  \item[$\mathbb{D}$] The set of dictionaries. See section \ref{sec:dictionaries}.
+  \item[$\bitstring$] The set of Boolean sequences/bitstrings. Subscript denotes length. See section \ref{sec:sequences}.
+  \item[$\safroleticket$] The set of seal-key tickets. See equation \ref{eq:ticket}. \emph{Not used as the set of complex numbers.}
+  \item[$\dictionary$] The set of dictionaries. See section \ref{sec:dictionaries}.
   \begin{description}
-    \item[$\dict{K}{V}$] The set of dictionaries making a partial bijection of domain $K$ to range $V$. See section \ref{sec:dictionaries}.
+    \item[$\dict{K}{V}$] The set of dictionaries making a partial bijection of domain $k$ to range $v$. See section \ref{sec:dictionaries}.
   \end{description}
-  \item[$\mathbb{E}$] The set of valid Ed25519 signatures. A subset of $\blob_{64}$. See section \ref{sec:cryptography}.
-  \begin{description}
-    \item[$\sig{K}{M}$] The set of valid Ed25519 signatures of the key $K$ and message $M$. A subset of $\mathbb{E}$. See section \ref{sec:cryptography}.
-  \end{description}
-  \item[$\mathbb{F}$] The set of Bandersnatch signatures. A subset of $\blob_{64}$. See section \ref{sec:cryptography}. \emph{NOTE: Not used as finite fields.}
-  \begin{description}
-    \item[$\bandersig{K}{C}{M}$] The set of Bandersnatch signatures of the public key $K$, context $C$ and message $M$. A subset of $\mathbb{F}$. See section \ref{sec:cryptography}.
-    \item[$\bar{\mathbb{F}}$] The set of Bandersnatch Ring\textsc{vrf} proofs. See section \ref{sec:cryptography}.
-    \item[$\bandersnatch{R}{C}{M}$] The set of Bandersnatch Ring\textsc{vrf} proofs of the root $R$, context $C$ and message $M$. A subset of $\bar{\mathbb{F}}$. See section \ref{sec:cryptography}.
-  \end{description}
-  \item[$\mathbb{G}$] The set of data segments, equivalent to octet sequences of length $\mathsf{W}_G$. See equation \ref{eq:segment}.
+  \item[$\sig{k}{m}$] The set of valid Ed25519 signatures of the key $k$ and message $m$. A subset of $\blob_{64}$. See section \ref{sec:cryptography}.
+  \item[$\bandersig{k}{c}{m}$] The set of Bandersnatch signatures of the public key $k$, context $c$ and message $m$. A subset of $\blob_{64}$. See section \ref{sec:cryptography}. \emph{NOTE: Not used as finite fields.}
+  \item[$\bandersnatch{r}{c}{m}$] The set of Bandersnatch Ring\textsc{vrf} proofs of the root $r$, context $c$ and message $m$. See section \ref{sec:cryptography}.
+  \item[$\segment$] The set of data segments, equivalent to octet sequences of length $\mathsf{W}_G$. See equation \ref{eq:segment}.
   \item[$\hash$] The set of 32-octet cryptographic values. A subset of $\blob_{32}$. $\hash$ without a subscript generally implies a hash function result. See section \ref{sec:cryptography}. \emph{NOTE: Not used as quaternions.}
   \begin{description}
     \item[$\bskey$] The set of Bandersnatch public keys. A subset of $\blob_{32}$. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
     \item[$\edkey$] The set of Ed25519 public keys. A subset of $\blob_{32}$. See section \ref{sec:signing}.
   \end{description}
   \item[$\workitem$] The set of work items. See equation \ref{eq:workitem}.
-  \item[$\mathbb{J}$] The set of work execution errors.
+  \item[$\workerror$] The set of work execution errors.
   \item[$\valkey$] The set of validator key-sets. See equation \ref{eq:validatorkeys}.
   \item[$\mathbb{L}$] The set of work-digests.
-  \item[$\mathbb{M}$] The set of \textsc{pvm} \textsc{ram} states. See equation \ref{eq:pvmmemory}.
+  \item[$\ram$] The set of \textsc{pvm} \textsc{ram} states. See equation \ref{eq:pvmmemory}.
   \item[$\operandtuple$] The accumulation operand element, corresponding to a single work-item.
   \item[$\workpackage$] The set of work-packages. See equation \ref{eq:workpackage}.
   \item[$\avspec$] The set of availability specifications.
   \item[$\mathbb{T}$] The set of deferred transfers.
-  \item[$\mathbb{U}$] The set of partial state, used during accumulation. See equation \ref{eq:partialstate}.  \item[$\mathbb{V}_{\memory}$] The set of validly readable indices for \textsc{pvm} \textsc{ram} $\memory$. See appendix \ref{sec:virtualmachine}.
-  \item[$\mathbb{V}^*_{\memory}$] The set of validly writable indices for \textsc{pvm} \textsc{ram} $\memory$. See appendix \ref{sec:virtualmachine}.
+  \item[$\mathbb{U}$] The set of partial state, used during accumulation. See equation \ref{eq:partialstate}.
+  \item[$\readable{\memory}$] The set of validly readable indices for \textsc{pvm} \textsc{ram} $\memory$. See appendix \ref{sec:virtualmachine}.
+  \item[$\writable{\memory}$] The set of validly writable indices for \textsc{pvm} \textsc{ram} $\memory$. See appendix \ref{sec:virtualmachine}.
   \item[$\workreport$] The set of work-reports.
   \item[$\mathbb{X}$] The set of refinement contexts.
   \item[$\blob$] The set of octet strings/``blobs''. Subscript denotes length. See section \ref{sec:sequences}.
@@ -250,7 +244,7 @@ Here, the prime annotation indicates posterior state. Individual components may 
 \begin{description}
   \item[$\varepsilon$] The exit-reason resulting from all machine state transitions. %	ε
   \item[$\nu$] The immediate values of an instruction. %	ν
-  \item[$\memory$] The memory sequence; a member of the set $\mathbb{M}$. %	μ
+  \item[$\memory$] The memory sequence; a member of the set $\ram$. %	μ
   \item[$\gascounter$] The gas counter. % ϱ
   \item[$\registers$] The registers. % ω
   \item[$\zeta$] The instruction sequence. %	ζ
