--- a/text/merklization.tex
+++ b/text/merklization.tex
@@ -24,7 +24,7 @@ The state serialization is then defined as the dictionary built from the amalgam
     &&C(2) &\mapsto \se(\authqueue) \;, \\
     &&C(3) &\mapsto \se(\var{[(h, b, s, \var{\mathbf{p}})\mid \tup{h, b, s, \mathbf{p}} \orderedin \recenthistory]}, \Fmmrencode{\beefybelt}) \;, \\
     &&C(4) &\mapsto \se\left(\tup{\pendingset, \epochroot, \left\{\,\begin{aligned}
-      0\ &\when \sealtickets \in \seq{\mathbb{C}}_\epochlen\\
+      0\ &\when \sealtickets \in \seq{\safroleticket}_\epochlen\\
       1\ &\when \sealtickets \in \seq{\bskey}_\epochlen\\
     \end{aligned}\right\}, \sealtickets,
     \var{\ticketaccumulator}}\right) \;, \\
@@ -73,11 +73,11 @@ In the case of a regular leaf, the remaining 6 bits of the first byte are zeroed
 Formally, we define the encoding functions $B$ and $L$:
 \begin{align}
   B&\colon\left\{\begin{aligned}
-    (\hash, \hash) &\to \mathbb{B}_{512}\\
+    (\hash, \hash) &\to \bitstring_{512}\\
     (l, r) &\mapsto [0] \concat \text{bits}(l)_{1\dots} \concat \text{bits}(r)
   \end{aligned}\right.\\
   L&\colon\left\{\begin{aligned}
-    (\blob_{31}, \blob) &\to \mathbb{B}_{512}\\
+    (\blob_{31}, \blob) &\to \bitstring_{512}\\
     (k, v) &\mapsto \begin{cases}
       [1, 0] \concat \text{bits}(\se_1(\len{v}))_{2\dots} \concat \text{bits}(k) \concat \text{bits}(v) \concat [0, 0, \dots] &\when \len{v} \le 32\\
       [1, 1, 0, 0, 0, 0, 0, 0] \concat \text{bits}(k) \concat \text{bits}(\blake(v)) &\otherwise
@@ -88,7 +88,7 @@ Formally, we define the encoding functions $B$ and $L$:
 We may then define the basic Merklization function $\merklizestate$ as:
 \begin{align}
   \merklizestate(\thestate) &\equiv M(\{ (\text{bits}(k) \mapsto \tup{k, v}) \mid (k \mapsto v) \in T(\thestate) \})\\
-  M(d: \dict{\mathbb{B}}{(\blob_{31}, \blob)}) &\equiv \begin{cases}
+  M(d: \dict{\bitstring}{(\blob_{31}, \blob)}) &\equiv \begin{cases}
     \zerohash &\when \len{d} = 0\\
     \blake(\text{bits}^{-1}(L(k, v))) &\when \Fvalues{d} = \set{ \tup{k, v} }\\
     \blake(\text{bits}^{-1}(B(M(l), M(r)))) &\otherwise\\
